--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@tsparticles/slim": "^3.7.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.5.2",
+    "embla-carousel-react": "^8.5.2",
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.473.0",
     "mini-svg-data-uri": "^1.4.4",
